XP-1873 Image name and path remains visible after unselecting item in ImageSelector - Fixed bug when image label overlayed image container

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/content/inputtype/image/image-selector.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/content/inputtype/image/image-selector.less
@@ -172,7 +172,7 @@
         display: block;
         position: absolute;
         width: 100%;
-        padding: 3px;
+        padding: 3px 0 3px 0;
         bottom: 0;
         opacity: 0.8;
         text-align: center;
